fix scrollbar chrome

--- a/src/index.css
+++ b/src/index.css
@@ -88,8 +88,8 @@ main {
    display: flex;
    flex-direction: column;
    align-items: center;
-   /* overflow-y: scroll;
-   scrollbar-width: none; */
+   /* overflow-y: scroll;*/
+   scrollbar-width: none;
    /* scrollbar-color: rgba(var(--text-tertiary)) rgba(var(--text-tertiary)); */
    /* scrollbar-color: transparent transparent; */
 }
