--- a/src/layouts/main/main.module.css
+++ b/src/layouts/main/main.module.css
@@ -32,6 +32,10 @@
    scrollbar-width: none;
 }
 
+.mainContenair::-webkit-scrollbar {
+   display: none;
+}
+
 @media screen and (max-width: 750px) {
    .loremContainer {
       padding: 0;
